@@ -83,6 +83,7 @@ Parser::Parser (std::istream & istream, X3DScene* scene) :
 	              istream (basic::gunzip (istream)),       
 	                scene (scene),                         
 	executionContextStack (),
+	                nodes (),
 	      currentComments (),                              
 	          whitespaces ()                               
 {
@@ -243,6 +244,11 @@ void
 Parser::addRootNode (const SFNode <X3DBaseNode> & rootNode)
 {
 	//__LOG__ << std::endl;
+	
+	for (auto & node : nodes)
+		node -> setup ();
+		
+	nodes .clear ();
 
 	getExecutionContext () -> getRootNodes () .emplace_back (rootNode);
 }
@@ -1315,8 +1321,9 @@ Parser::node (SFNode <X3DBaseNode> & _node, const std::string & _nodeNameId)
 			{
 				//__LOG__ << _nodeTypeId << std::endl;
 
-				_basicNode -> setup ();
 				_basicNode -> addInnerComments (getComments ());
+
+				nodes .emplace_back (_basicNode);
 
 				//__LOG__ << _nodeTypeId << std::endl;
 				return true;
