@@ -1,3 +1,9 @@
+2013-06-22  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Parser.h:
+	* Parser.cpp:
+	* X3DBaseNode.cpp: 
+
 2013-06-21  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3DOutput.h:
