@@ -1,3 +1,7 @@
+2013-06-22  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* SelfReference.wrl: 
+
 2013-06-21  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* test.wrl: 
